grid styling WIP

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="portfolio">
       <h3>Some of my projects</h3>
-      <div class="project grid">
+      <div class="projects grid">
         <a href="">
           <img src="assets/imageP1.png" alt="project1" />
           <h4>Project 1</h4>
