--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="grid">
         <p class="copyright">Copyright 2020 Pappricot</p>
         <ul class="social">
-          <li><a href=""></a><img src="assets/image2.png" alt="github"></a></li>
-          <li><a href=""></a><img src="assets/image4.png" alt="linkedin"></a></li>
+          <li><a href="https://github.com/pappricot"><img src="assets/image2.png" alt="github"><h4>Github</h4></a></li>
+          <li><a href="https://www.linkedin.com/in/ane4ka/"><img src="assets/image4.png" alt="linkedin"><h4>LinkedIn</a></li>
         </ul>
       </div>
   </body>
