--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Pappricot Resume</title>
+    <title>Pappricot</title>
   </head>
   <body>
     <nav class="site-nav grid">
-      <h1>Pappricot Resume</h1>
+      <h1>Pappricot here, hello there!</h1>
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
