--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       <div class="welcome-text">
         <h2>Doodle Dreamer Doer <br />Javascript Developer</h2>
         <p class="leading">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Non arcu
-          risus quis varius quam.
+          A developer by day, doodler by night, and a doer all day everyday :) An adaptive and responsive (just like this page) person who can fit into any jar and box.  
         </p>
         <a href="#portfolio" class="button">View my work</a>
       </div>
@@ -34,7 +32,7 @@
     <section id="portfolio">
       <h3>Some of my projects</h3>
       <div class="projects grid">
-        <a href="">
+        <a href="screens/p1.html">
           <img src="assets/imageP1.png" alt="project1" />
           <h4>Project 1</h4>
         </a>
@@ -72,8 +70,7 @@
     </section>
 
     <section id="contact">
-      <h3>Get in touch</h3>
-      <p class="leading">Lorem ipsum dolor sit amet</p>
+      <h3>Get in touch, don't be shy ;)</h3>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="text" placeholder="NAME" />
