--- a/screens/p1.html
+++ b/screens/p1.html
@@ -4,17 +4,20 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../styles.css" />
+    <script src="../main.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <nav class="site-nav grid">
+    <nav class="site-nav grid" id="project1">
+      <h5 class="button" onclick="goBack()">Go Back</h5>
       <h1>Pappricot here, hello there!</h1>
+
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <h1>1</h1>
+    <h1 id="project1">1</h1>
   </body>
 </html>
