--- a/screens/p3.html
+++ b/screens/p3.html
@@ -4,10 +4,12 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../styles.css" />
+    <script src="../main.js"></script>
     <title>Document</title>
   </head>
   <body>
     <nav class="site-nav grid">
+      <h5 class="button" onclick="goBack()">Go Back</h5>
       <h1>Pappricot here, hello there!</h1>
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
