--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#portfolio" class="button">View my work</a>
       </div>
       <div class="welcome-image">
-        <img src="assets/imageHeader.png" alt="banner" />
+        <img src="assets/hero_image.jpg" alt="banner" />
       </div>
     </section>
 
