--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 
     <section id="portfolio">
       <h3>Some of my projects</h3>
-      <div class="projects grid">
+      <div class="projects grid ">
         <a href="screens/p1.html">
-          <img src="assets/imageP1.png" alt="project1" />
+          <img src="assets/imageP1.png" alt="project1" class="cloud"/>
           <h4>Project 1</h4>
         </a>
         <a href="screens/p2.html">
-          <img src="assets/imageP2.png" alt="project2" />
+          <img src="assets/imageP2.png" alt="project2" class="cloud"/>
           <h4>Project 2</h4>
         </a>
         <a href="screens/p3.html">
-          <img src="assets/imageP1.png" alt="project3" />
+          <img src="assets/imageP1.png" alt="project3" class="cloud"/>
           <h4>Project 3</h4>
         </a>
       </div>
@@ -57,19 +57,19 @@
       <h3>Things I can do</h3>
       <ul class="grid">
         <li>
-          <img src="assets/image2.png" alt="skill1" />
+          <img src="assets/image2.png" alt="skill1" class="cloud2" />
           <h4>Javascript</h4>
         </li>
         <li>
-          <img src="assets/image3.png" alt="skill1" />
+          <img src="assets/image3.png" alt="skill1" class="cloud2"/>
           <h4>React</h4>
         </li>
         <li>
-          <img src="assets/image4.png" alt="skill1" />
+          <img src="assets/image4.png" alt="skill1" class="cloud2"/>
           <h4>Redux</h4>
         </li>
         <li>
-          <img src="assets/image5.png" alt="skill1" />
+          <img src="assets/image5.png" alt="skill1" class="cloud2"/>
           <h4>Typescript</h4>
         </li>
       </ul>
